correcao do nome do projeto

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "external/bybind11"]
 	path = external/bybind11
 	url = https://github.com/pybind/pybind11
+[submodule "external/pybind11"]
+	path = external/pybind11
+	url = https://github.com/pybind/pybind11
